analysis/analysis-api/testData/symbols/singleSymbolByPsi/errors/valPropertyWithSetter.kt
// DO_NOT_CHECK_NON_PSI_SYMBOL_RESTORE_K1

val <caret>i: Int = 0
    set(value) {}